# Astrostruct

./: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  astrostruct.xcf  config.doxygen  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0
cmake/: CMakeLists.txt
cmakemodules/: FindBullet.cmake  FindUTF8.cmake
data/config/: init.lua
data/shaders/: flat_colorless.vert  map.frag  map.vert  text.vert
data/textures/gui/: checkbox.lua
doc/: README
src/: .NGame.cpp.swp  .NText.cpp.swp  .main.cpp.swp  Makefile  Makefile.in  NButton.cpp  NButton.hpp  NCamera.cpp  NCamera.hpp  NCheckbox.cpp  NCheckbox.hpp  NColor.cpp  NColor.hpp  NConfig.cpp  NConfig.hpp  NConsole.cpp  NConsole.hpp  NEngine.cpp  NEngine.hpp  NEntity.cpp  NEntity.hpp  NFileSystem.cpp  NFileSystem.hpp  NFramebuffer.cpp  NFramebuffer.hpp  NGame.cpp  NGame.hpp  NGui.cpp  NGui.hpp  NInput.cpp  NInput.hpp  NLight.cpp  NLight.hpp  NLog.cpp  NLog.hpp  NLua.cpp  NLua.hpp  NMap.cpp  NMap.hpp  NNetwork.cpp  (+42 more)
src/data/config/: .init.lua.swp  init.lua  server.lua
src/data/fonts/: init.lua
src/data/shaders/: .flat.vert.swp  flat.frag  flat.vert  flat_textureless.frag  map.vert  normal.frag  normal.vert  post.frag  text.vert
src/data/sounds/: coin.lua
src/data/textures/gui/: button.lua  window.lua
src/data/textures/human/: human.lua
src/data/textures/lights/: point.lua  ray.lua
src/data/textures/maps/: grimy.lua
src/data/textures/runner/: runner.lua
src/src/: Makefile
windowsbin/: README
windowsbin/data/shaders/: flat_textureless.vert  normal.vert  normal_textureless.vert  text.frag
