bin_PROGRAMS = main

main_SOURCES = src/main.cpp \
			   src/NButton.cpp \
			   src/NCamera.cpp \
			   src/NCheckbox.cpp \
			   src/NColor.cpp \
			   src/NConfig.cpp \
			   src/NConsole.cpp \
			   src/NEngine.cpp \
			   src/NFileSystem.cpp \
			   src/NGame.cpp \
			   src/NInput.cpp \
			   src/NLight.cpp \
			   src/NLua.cpp \
			   src/NMap.cpp \
			   src/NNetwork.cpp \
			   src/NNode.cpp \
			   src/NPacket.cpp \
			   src/NPhysics.cpp \
			   src/NPlayer.cpp \
			   src/NRender.cpp \
			   src/NScene.cpp \
			   src/NShader.cpp \
			   src/NSignal.cpp \
			   src/NSound.cpp \
			   src/NStateMachine.cpp \
			   src/NText.cpp \
			   src/NTexture.cpp \
			   src/NUnicode.cpp \
			   src/NWindow.cpp \
			   src/NTextInput.cpp
